--- a/styl.css
+++ b/styl.css
@@ -116,7 +116,7 @@ button:hover{
     float: left;
     width: 100%;
     overflow: hidden;
-    background-color: #696969;
+    background-color: #2F4F4F;
     text-align: center;
     color: white;
 }
